# whatsapp-crm-evolution

./: .env  .env.example  Dockerfile  README.md  app.py  campaign_manager.py  chatbot_engine.py  crm_manager.py  docker-compose.yml  evolution_api.py  evolution_connector.py  google_sheets.py  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  security.py  twilio_api.py  whatsapp_direct.py
