[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.0",
    "gunicorn>=23.0.0",
    "oauth2client>=4.1.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "pywhatkit>=5.4",
    "pillow>=11.1.0",
    "qrcode>=8.0",
    "twilio>=9.5.1",
]
